feat: 设计动态多级缓存架构（Caffeine+可选Redis/其他），增加客户端、域名、访问令牌多级缓存组合查询实现；优化代理管理器通用API；域名管理器优化，分离子域名和完整域名，增加基础域名存储，方便后续支持多基础域名